# hw-accelerated-neural-net

./: .travis.yml  CMakeLists.txt  README.md  feed_forward_translation.c  feed_forward_translation.h  hardware_emulator.c  hardware_emulator.h  layer.h  library.c  library.h  run_build.sh  test.c  test.h  utilities.h
